MEB : integrate side bar api part 1

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>UHG</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta charset="UTF-8">
+        
+        <link href='https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600|Open+Sans:400italic,600italic,400,600,700' rel='stylesheet' type='text/css'>
+
     </head>
-    <body>
-        <div id="main"></div>
-        <script src="dist/bundle.js"></script>
+    <body class="widget-container form-io" style="overflow: auto;">
+        <div id="main"></div>                
+        <script type="text/javascript" src="scripts/jquery-1.12.3.min.js"></script>
+        <script type="text/javascript" src="scripts/knockout-3.4.0.js"></script>
+        <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+        <script type="text/javascript" src="scripts/security.js"></script>
+        <script type="text/javascript" src="scripts/settings.js"></script>
+        <script type="text/javascript" src="scripts/SidebarApi-1.3.5.js"></script>        
+        <script type="text/javascript" src="scripts/uhg.medicalrequest.js"></script>
+        <script type="text/javascript" src="scripts/uhg.logging.js"></script>
+                
+        <script type="text/javascript" src="dist/bundle.js"></script>
     </body>
 </html>
