--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     </head>
     <body class="widget-container form-io" style="overflow: auto;">
+        <div id="mainPage">This is Main Page</div>   
         <div id="main"></div>                
         <script type="text/javascript" src="scripts/jquery-1.12.3.min.js"></script>
         <script type="text/javascript" src="scripts/knockout-3.4.0.js"></script>
